--- a/packages/atomic/src/components/common/atomic-icon/atomic-icon.tw.css
+++ b/packages/atomic/src/components/common/atomic-icon/atomic-icon.tw.css
@@ -1,13 +1,25 @@
 @import '../../../global/global.pcss';
-@import '../../../utils/tailwind-utilities/aspect-square.tw.css';
 
 :host {
-  @apply inline-block;
+  display: inline-block;
   fill: currentColor;
-  @apply aspect-square-[auto];
+  /* TODO: KIT-3925 use utility class instead */
+  aspect-ratio: 1;
+  height: auto;
+
+  @supports not (aspect-ratio: 1) {
+    height: auto;
+  }
+
   > svg {
     width: 100%;
     max-height: 100%;
-    @apply aspect-square-[auto];
+    /* TODO: KIT-3925 use utility class instead */
+    aspect-ratio: 1;
+    height: auto;
+
+    @supports not (aspect-ratio: 1) {
+      height: auto;
+    }
   }
 }
