--- a/packages/atomic/src/components/common/atomic-icon/atomic-icon.tw.css
+++ b/packages/atomic/src/components/common/atomic-icon/atomic-icon.tw.css
@@ -1,25 +1,12 @@
-@import '../../../global/global.pcss';
+@reference '../../../utils/tailwind-utilities/aspect-square.tw.css';
 
 :host {
-  display: inline-block;
+  @apply inline-block;
   fill: currentColor;
-  /* TODO: KIT-3925 use utility class instead */
-  aspect-ratio: 1;
-  height: auto;
-
-  @supports not (aspect-ratio: 1) {
-    height: auto;
-  }
-
+  @apply aspect-square-[auto];
   > svg {
     width: 100%;
     max-height: 100%;
-    /* TODO: KIT-3925 use utility class instead */
-    aspect-ratio: 1;
-    height: auto;
-
-    @supports not (aspect-ratio: 1) {
-      height: auto;
-    }
   }
+  @apply aspect-square-[auto];
 }
